# mytecz_omnitoken

./: .coverage  CONTRIBUTING.md  LICENSE  README.md  debug_hybrid.py  debug_roundtrip.py  debug_wordpiece.py  debug_words.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
data/test_samples/: small_texts.txt  unicode_cases.txt
data/training_corpus/: code_snippets.txt  english.txt  json_samples.json  multilingual.txt
examples/: example_basic.py  example_file_json_input.py  example_json_file_input.py
mytecz_omnitoken.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
omnitoken/: __init__.py  cli.py  tokenizer_base.py  tokenizer_bpe.py  tokenizer_hybrid.py  tokenizer_sentencepiece.py  tokenizer_wordpiece.py  trainer.py  utils.py
omnitoken/data/test_samples/: roundtrip_expected.json
omnitoken/data/training_corpus/: emojis.txt
scripts/: build.py  dev.py
tests/: test_basic.py  test_configuration.py  test_frequency_api.py  test_input_formats.py  test_reverse_tokenization.py  test_roundtrip.py  test_unicode.py
