[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytecz-omnitoken"
version = "0.1.0"
description = "Universal tokenizer with modular architecture supporting multiple tokenization strategies"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Kalyana Krishna Kondapalli", email = "kalyanakondapalli@gmail.com"}
]
maintainers = [
    {name = "Kalyana Krishna Kondapalli", email = "kalyanakondapalli@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
keywords = [
    "tokenizer",
    "nlp",
    "natural-language-processing",
    "bpe",
    "wordpiece", 
    "sentencepiece",
    "subword",
    "machine-learning",
    "text-processing",
    "unicode",
    "multilingual",
    "hybrid-tokenization"
]
requires-python = ">=3.10"
dependencies = [
    # Minimal dependencies for broad compatibility
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
    "pandas>=1.5",
    "rich>=13.0",
]
performance = [
    "numpy>=1.24",
    "cython>=3.0",
]
all = [
    "mytecz-omnitoken[dev,test,examples,performance]"
]

[project.urls]
Homepage = "https://github.com/kalyanakkondapalli/mytecz_omnitoken"
Documentation = "https://github.com/kalyanakkondapalli/mytecz_omnitoken#readme"
Repository = "https://github.com/kalyanakkondapalli/mytecz_omnitoken.git"
"Bug Tracker" = "https://github.com/kalyanakkondapalli/mytecz_omnitoken/issues"
"Source Code" = "https://github.com/kalyanakkondapalli/mytecz_omnitoken"

[project.scripts]
omnitoken = "omnitoken.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnitoken*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
omnitoken = [
    "py.typed",
    # Include sample datasets (nested training/test corpora)
    "data/*.json", "data/*.txt",
    "data/**/*.json", "data/**/*.txt"
]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

# MyPy type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["omnitoken"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"