[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytecz-omnitoken"
version = "0.1.0"
description = "Universal tokenizer with modular architecture supporting multiple tokenization strategies"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Kalyana Krishna Kondapalli", email = "kalyanakondapalli@gmail.com"}
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0","black>=23.0","ruff>=0.1.0","mypy>=1.0","pre-commit>=3.0"]
test = ["pytest>=7.0","pytest-cov>=4.0","pytest-xdist>=3.0"]

[project.urls]
Homepage = "https://github.com/kalyanakkondapalli/mytecz_omnitoken"
Repository = "https://github.com/kalyanakkondapalli/mytecz_omnitoken.git"
"Bug Tracker" = "https://github.com/kalyanakkondapalli/mytecz_omnitoken/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["omnitoken*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
omnitoken = ["py.typed","data/*.json","data/*.txt"]

[project.scripts]
omnitoken = "omnitoken.cli:main"
